refactor: wip