@@ -30,14 +30,14 @@ public class CompleteConverterTest extends AbstractConverterTest {
 
   @Test
   public void convertXMLToModel() throws Exception {
-    BpmnModel bpmnModel = readXMLFile();
+    var bpmnModel = readXMLFile();
     validateModel(bpmnModel);
   }
 
   @Test
   public void convertModelToXML() throws Exception {
-    BpmnModel bpmnModel = readXMLFile();
-    BpmnModel parsedModel = exportAndReadXMLFile(bpmnModel);
+    var bpmnModel = readXMLFile();
+    var parsedModel = exportAndReadXMLFile(bpmnModel);
     validateModel(parsedModel);
     deployProcess(parsedModel);
   }
@@ -47,7 +47,7 @@ public class CompleteConverterTest extends AbstractConverterTest {
   }
 
   private void validateModel(BpmnModel model) {
-    FlowElement flowElement = model.getMainProcess().getFlowElement("userTask1");
+    var flowElement = model.getMainProcess().getFlowElement("userTask1");
     assertThat(flowElement).isNotNull();
     assertThat(flowElement).isInstanceOf(UserTask.class);
     assertThat(flowElement.getId()).isEqualTo("userTask1");
@@ -56,18 +56,21 @@ public class CompleteConverterTest extends AbstractConverterTest {
     assertThat(flowElement).isNotNull();
     assertThat(flowElement).isInstanceOf(IntermediateCatchEvent.class);
     assertThat(flowElement.getId()).isEqualTo("catchsignal");
-    IntermediateCatchEvent catchEvent = (IntermediateCatchEvent) flowElement;
+
+    var catchEvent = (IntermediateCatchEvent) flowElement;
     assertThat(catchEvent.getEventDefinitions()).hasSize(1);
-    assertThat(catchEvent.getEventDefinitions().get(0)).isInstanceOf(SignalEventDefinition.class);
-    SignalEventDefinition signalEvent = (SignalEventDefinition) catchEvent.getEventDefinitions().get(0);
+    assertThat(catchEvent.getEventDefinitions().getFirst()).isInstanceOf(SignalEventDefinition.class);
+
+    var signalEvent = (SignalEventDefinition) catchEvent.getEventDefinitions()
+      .getFirst();
     assertThat(signalEvent.getSignalRef()).isEqualTo("testSignal");
 
     flowElement = model.getMainProcess().getFlowElement("subprocess");
     assertThat(flowElement).isNotNull();
     assertThat(flowElement).isInstanceOf(SubProcess.class);
     assertThat(flowElement.getId()).isEqualTo("subprocess");
-    SubProcess subProcess = (SubProcess) flowElement;
 
+    var subProcess = (SubProcess) flowElement;
     flowElement = subProcess.getFlowElement("receiveTask");
     assertThat(flowElement).isNotNull();
     assertThat(flowElement).isInstanceOf(ReceiveTask.class);
