@@ -17,15 +17,21 @@ package org.activiti.bpmn;
 
 import static java.util.Arrays.asList;
 
+import com.mxgraph.layout.hierarchical.mxHierarchicalLayout;
+import com.mxgraph.model.mxCell;
+import com.mxgraph.model.mxGeometry;
+import com.mxgraph.util.mxConstants;
+import com.mxgraph.util.mxPoint;
+import com.mxgraph.view.mxCellState;
+import com.mxgraph.view.mxEdgeStyle;
+import com.mxgraph.view.mxGraph;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-
 import javax.swing.SwingConstants;
-
 import org.activiti.bpmn.model.Artifact;
 import org.activiti.bpmn.model.Association;
 import org.activiti.bpmn.model.BaseElement;
@@ -42,20 +48,10 @@ import org.activiti.bpmn.model.Process;
 import org.activiti.bpmn.model.SequenceFlow;
 import org.activiti.bpmn.model.SubProcess;
 import org.activiti.bpmn.model.Task;
-
-import com.mxgraph.layout.hierarchical.mxHierarchicalLayout;
-import com.mxgraph.model.mxCell;
-import com.mxgraph.model.mxGeometry;
-import com.mxgraph.util.mxConstants;
-import com.mxgraph.util.mxPoint;
-import com.mxgraph.view.mxCellState;
-import com.mxgraph.view.mxEdgeStyle;
-import com.mxgraph.view.mxGraph;
 import org.activiti.bpmn.model.TextAnnotation;
 
 /**
  * Auto layouts a {@link BpmnModel}.
- *
  */
 public class BpmnAutoLayout {
 
@@ -111,19 +107,19 @@ public class BpmnAutoLayout {
     cellParent = graph.getDefaultParent();
     graph.getModel().beginUpdate();
 
- // Subprocesses are handled in a new instance of BpmnAutoLayout, hence they instantiations of new maps here.
+    // Subprocesses are handled in a new instance of BpmnAutoLayout, hence they instantiations of new maps here.
 
-    handledFlowElements = new HashMap<String, FlowElement>();
-    handledArtifacts = new HashMap<String, Artifact>();
-    generatedVertices = new HashMap<String, Object>();
-    generatedSequenceFlowEdges = new HashMap<String, Object>();
-    generatedAssociationEdges = new HashMap<String, Object>();
+    handledFlowElements = new HashMap<>();
+    handledArtifacts = new HashMap<>();
+    generatedVertices = new HashMap<>();
+    generatedSequenceFlowEdges = new HashMap<>();
+    generatedAssociationEdges = new HashMap<>();
 
-    associations = new HashMap<String, Association>(); //Associations are gathered and processed afterwards, because we must be sure we already found source and target
-    textAnnotations = new HashMap<String, TextAnnotation>(); // Text Annotations are gathered and processed afterwards, because we must be sure we already found the parent.
+    associations = new HashMap<>(); //Associations are gathered and processed afterward, because we must be sure we already found source and target
+    textAnnotations = new HashMap<>(); // Text Annotations are gathered and processed afterward, because we must be sure we already found the parent.
 
-    sequenceFlows = new HashMap<String, SequenceFlow>(); // Sequence flow are gathered and processed afterwards,because we mustbe sure we already found source and target
-    boundaryEvents = new ArrayList<BoundaryEvent>(); // Boundary events are gathered and processed afterwards, because we must be sure we have its parent
+    sequenceFlows = new HashMap<>(); // Sequence flow are gathered and processed afterward,because we must be sure we already found source and target
+    boundaryEvents = new ArrayList<>(); // Boundary events are gathered and processed afterward, because we must be sure we have its parent
 
     // Process all elements
     for (FlowElement flowElement : flowElementsContainer.getFlowElements()) {
@@ -160,7 +156,7 @@ public class BpmnAutoLayout {
     handleSequenceFlow();
     handleAssociations();
 
-    // All elements are now put in the graph. Let's layout them!
+    // All elements are now put in the graph. Lets layout them!
     CustomLayout layout = new CustomLayout(graph, SwingConstants.WEST);
     layout.setIntraCellSpacing(100.0);
     layout.setResizeParent(true);
@@ -187,14 +183,14 @@ public class BpmnAutoLayout {
     // We really must have ids for sequence flow to be able to generate
     // stuff
     if (sequenceFlow.getId() == null) {
-      sequenceFlow.setId("sequenceFlow-" + UUID.randomUUID().toString());
+      sequenceFlow.setId("sequenceFlow-" + UUID.randomUUID());
     }
   }
 
   protected void ensureArtifactIdSet(Artifact artifact) {
     // We really must have ids for sequence flow to be able to generate stuff
     if (artifact.getId() == null) {
-      artifact.setId("artifact-" + UUID.randomUUID().toString());
+      artifact.setId("artifact-" + UUID.randomUUID());
     }
   }
 
@@ -219,7 +215,8 @@ public class BpmnAutoLayout {
   }
 
   protected void handleActivity(FlowElement flowElement) {
-    Object activityVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, taskWidth, taskHeight);
+    Object activityVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, taskWidth,
+      taskHeight);
     generatedVertices.put(flowElement.getId(), activityVertex);
   }
 
@@ -229,26 +226,28 @@ public class BpmnAutoLayout {
 
     double subProcessWidth = bpmnAutoLayout.getGraph().getView().getGraphBounds().getWidth();
     double subProcessHeight = bpmnAutoLayout.getGraph().getView().getGraphBounds().getHeight();
-    Object subProcessVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, subProcessWidth + 2 * subProcessMargin, subProcessHeight + 2 * subProcessMargin);
+    Object subProcessVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0,
+      subProcessWidth + 2 * subProcessMargin, subProcessHeight + 2 * subProcessMargin);
     generatedVertices.put(flowElement.getId(), subProcessVertex);
   }
 
   protected void handleBoundaryEvents() {
     for (BoundaryEvent boundaryEvent : boundaryEvents) {
       mxGeometry geometry = new mxGeometry(0.8, 1.0, eventSize, eventSize);
-      geometry.setOffset(new mxPoint(-(eventSize / 2), -(eventSize / 2)));
+      geometry.setOffset(new mxPoint(-((double) eventSize / 2), -((double) eventSize / 2)));
       geometry.setRelative(true);
       mxCell boundaryPort = new mxCell(null, geometry, "shape=ellipse;perimter=ellipsePerimeter");
       boundaryPort.setId("boundary-event-" + boundaryEvent.getId());
       boundaryPort.setVertex(true);
 
-      Object portParent = null;
+      Object portParent;
       if (boundaryEvent.getAttachedToRefId() != null) {
         portParent = generatedVertices.get(boundaryEvent.getAttachedToRefId());
       } else if (boundaryEvent.getAttachedToRef() != null) {
         portParent = generatedVertices.get(boundaryEvent.getAttachedToRef().getId());
       } else {
-        throw new RuntimeException("Could not generate DI: boundaryEvent '" + boundaryEvent.getId() + "' has no attachedToRef");
+        throw new RuntimeException("Could not generate DI: boundaryEvent '" + boundaryEvent.getId()
+          + "' has no attachedToRef");
       }
 
       graph.addCell(boundaryPort, portParent);
@@ -258,14 +257,14 @@ public class BpmnAutoLayout {
 
   protected void handleSequenceFlow() {
 
-    Hashtable<String, Object> edgeStyle = new Hashtable<String, Object>();
+    Hashtable<String, Object> edgeStyle = new Hashtable<>();
     edgeStyle.put(mxConstants.STYLE_ORTHOGONAL, true);
     edgeStyle.put(mxConstants.STYLE_EDGE, mxEdgeStyle.ElbowConnector);
     edgeStyle.put(mxConstants.STYLE_ENTRY_X, 0.0);
     edgeStyle.put(mxConstants.STYLE_ENTRY_Y, 0.5);
     graph.getStylesheet().putCellStyle(STYLE_SEQUENCEFLOW, edgeStyle);
 
-    Hashtable<String, Object> boundaryEdgeStyle = new Hashtable<String, Object>();
+    Hashtable<String, Object> boundaryEdgeStyle = new Hashtable<>();
     boundaryEdgeStyle.put(mxConstants.STYLE_EXIT_X, 0.5);
     boundaryEdgeStyle.put(mxConstants.STYLE_EXIT_Y, 1.0);
     boundaryEdgeStyle.put(mxConstants.STYLE_ENTRY_X, 0.5);
@@ -277,7 +276,7 @@ public class BpmnAutoLayout {
       Object sourceVertex = generatedVertices.get(sequenceFlow.getSourceRef());
       Object targetVertex = generatedVertices.get(sequenceFlow.getTargetRef());
 
-      String style = null;
+      String style;
 
       if (handledFlowElements.get(sequenceFlow.getSourceRef()) instanceof BoundaryEvent) {
         // Sequence flow out of boundary events are handled in a
@@ -289,21 +288,22 @@ public class BpmnAutoLayout {
         style = STYLE_SEQUENCEFLOW;
       }
 
-      Object sequenceFlowEdge = graph.insertEdge(cellParent, sequenceFlow.getId(), "", sourceVertex, targetVertex, style);
+      Object sequenceFlowEdge = graph.insertEdge(cellParent, sequenceFlow.getId(), "", sourceVertex,
+        targetVertex, style);
       generatedSequenceFlowEdges.put(sequenceFlow.getId(), sequenceFlowEdge);
     }
   }
 
   protected void handleAssociations() {
 
-    Hashtable<String, Object> edgeStyle = new Hashtable<String, Object>();
+    Hashtable<String, Object> edgeStyle = new Hashtable<>();
     edgeStyle.put(mxConstants.STYLE_ORTHOGONAL, true);
     edgeStyle.put(mxConstants.STYLE_EDGE, mxEdgeStyle.ElbowConnector);
     edgeStyle.put(mxConstants.STYLE_ENTRY_X, 0.0);
     edgeStyle.put(mxConstants.STYLE_ENTRY_Y, 0.5);
     graph.getStylesheet().putCellStyle(STYLE_SEQUENCEFLOW, edgeStyle);
 
-    Hashtable<String, Object> boundaryEdgeStyle = new Hashtable<String, Object>();
+    Hashtable<String, Object> boundaryEdgeStyle = new Hashtable<>();
     boundaryEdgeStyle.put(mxConstants.STYLE_EXIT_X, 0.5);
     boundaryEdgeStyle.put(mxConstants.STYLE_EXIT_Y, 1.0);
     boundaryEdgeStyle.put(mxConstants.STYLE_ENTRY_X, 0.5);
@@ -315,7 +315,7 @@ public class BpmnAutoLayout {
       Object sourceVertex = generatedVertices.get(association.getSourceRef());
       Object targetVertex = generatedVertices.get(association.getTargetRef());
 
-      String style = null;
+      String style;
 
       if (handledFlowElements.get(association.getSourceRef()) instanceof BoundaryEvent) {
         // Sequence flow out of boundary events are handled in a different way,
@@ -325,7 +325,8 @@ public class BpmnAutoLayout {
         style = STYLE_SEQUENCEFLOW;
       }
 
-      Object associationEdge = graph.insertEdge(cellParent, association.getId(), "", sourceVertex, targetVertex, style);
+      Object associationEdge = graph.insertEdge(cellParent, association.getId(), "", sourceVertex,
+        targetVertex, style);
       generatedAssociationEdges.put(association.getId(), associationEdge);
     }
   }
@@ -335,26 +336,28 @@ public class BpmnAutoLayout {
   protected void createEventVertex(FlowElement flowElement) {
     // Add styling for events if needed
     if (!graph.getStylesheet().getStyles().containsKey(STYLE_EVENT)) {
-      Hashtable<String, Object> eventStyle = new Hashtable<String, Object>();
+      Hashtable<String, Object> eventStyle = new Hashtable<>();
       eventStyle.put(mxConstants.STYLE_SHAPE, mxConstants.SHAPE_ELLIPSE);
       graph.getStylesheet().putCellStyle(STYLE_EVENT, eventStyle);
     }
 
     // Add vertex representing event to graph
-    Object eventVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, eventSize, eventSize, STYLE_EVENT);
+    Object eventVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, eventSize,
+      eventSize, STYLE_EVENT);
     generatedVertices.put(flowElement.getId(), eventVertex);
   }
 
   protected void createGatewayVertex(FlowElement flowElement) {
     // Add styling for gateways if needed
     if (graph.getStylesheet().getStyles().containsKey(STYLE_GATEWAY)) {
-      Hashtable<String, Object> style = new Hashtable<String, Object>();
+      Hashtable<String, Object> style = new Hashtable<>();
       style.put(mxConstants.STYLE_SHAPE, mxConstants.SHAPE_RHOMBUS);
       graph.getStylesheet().putCellStyle(STYLE_GATEWAY, style);
     }
 
     // Create gateway node
-    Object gatewayVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0, gatewaySize, gatewaySize, STYLE_GATEWAY);
+    Object gatewayVertex = graph.insertVertex(cellParent, flowElement.getId(), "", 0, 0,
+      gatewaySize, gatewaySize, STYLE_GATEWAY);
     generatedVertices.put(flowElement.getId(), gatewayVertex);
   }
 
@@ -370,8 +373,10 @@ public class BpmnAutoLayout {
     for (String flowElementId : generatedVertices.keySet()) {
       Object vertex = generatedVertices.get(flowElementId);
       mxCellState cellState = graph.getView().getState(vertex);
-      GraphicInfo subProcessGraphicInfo = createDiagramInterchangeInformation(handledFlowElements.get(flowElementId), (int) cellState.getX(), (int) cellState.getY(), (int) cellState.getWidth(),
-          (int) cellState.getHeight());
+      GraphicInfo subProcessGraphicInfo = createDiagramInterchangeInformation(
+        handledFlowElements.get(flowElementId), (int) cellState.getX(), (int) cellState.getY(),
+        (int) cellState.getWidth(),
+        (int) cellState.getHeight());
 
       // The DI for the elements of a subprocess are generated without
       // knowledge of the rest of the graph
@@ -379,7 +384,7 @@ public class BpmnAutoLayout {
       // subprocess itself
       if (handledFlowElements.get(flowElementId) instanceof SubProcess) {
 
-        // Always expanded when auto layouting
+        // Always expanded when auto lay outing
         subProcessGraphicInfo.setExpanded(true);
       }
     }
@@ -396,16 +401,22 @@ public class BpmnAutoLayout {
       // the rhombus,
       // hence we force the starting point of the sequence flow to the
       // closest rhombus corner point.
-      FlowElement sourceElement = handledFlowElements.get(sequenceFlows.get(sequenceFlowId).getSourceRef());
-      if (sourceElement instanceof Gateway && ((Gateway) sourceElement).getOutgoingFlows().size() > 1) {
-        mxPoint startPoint = points.get(0);
+      FlowElement sourceElement = handledFlowElements.get(
+        sequenceFlows.get(sequenceFlowId).getSourceRef());
+      if (sourceElement instanceof Gateway
+        && ((Gateway) sourceElement).getOutgoingFlows().size() > 1) {
+        mxPoint startPoint = points.getFirst();
         Object gatewayVertex = generatedVertices.get(sourceElement.getId());
         mxCellState gatewayState = graph.getView().getState(gatewayVertex);
 
-        mxPoint northPoint = new mxPoint(gatewayState.getX() + (gatewayState.getWidth()) / 2, gatewayState.getY());
-        mxPoint southPoint = new mxPoint(gatewayState.getX() + (gatewayState.getWidth()) / 2, gatewayState.getY() + gatewayState.getHeight());
-        mxPoint eastPoint = new mxPoint(gatewayState.getX() + gatewayState.getWidth(), gatewayState.getY() + (gatewayState.getHeight()) / 2);
-        mxPoint westPoint = new mxPoint(gatewayState.getX(), gatewayState.getY() + (gatewayState.getHeight()) / 2);
+        mxPoint northPoint = new mxPoint(gatewayState.getX() + (gatewayState.getWidth()) / 2,
+          gatewayState.getY());
+        mxPoint southPoint = new mxPoint(gatewayState.getX() + (gatewayState.getWidth()) / 2,
+          gatewayState.getY() + gatewayState.getHeight());
+        mxPoint eastPoint = new mxPoint(gatewayState.getX() + gatewayState.getWidth(),
+          gatewayState.getY() + (gatewayState.getHeight()) / 2);
+        mxPoint westPoint = new mxPoint(gatewayState.getX(),
+          gatewayState.getY() + (gatewayState.getHeight()) / 2);
 
         double closestDistance = Double.MAX_VALUE;
         mxPoint closestPoint = null;
@@ -426,10 +437,10 @@ public class BpmnAutoLayout {
           mxPoint nextPoint = points.get(1);
           nextPoint.setY(closestPoint.getY());
         }
-
       }
 
-      createDiagramInterchangeInformation(handledFlowElements.get(sequenceFlowId), optimizeEdgePoints(points));
+      createDiagramInterchangeInformation(handledFlowElements.get(sequenceFlowId),
+        optimizeEdgePoints(points));
     }
   }
 
@@ -439,19 +450,20 @@ public class BpmnAutoLayout {
       Object edge = generatedAssociationEdges.get(associationId);
       List<mxPoint> points = graph.getView().getState(edge).getAbsolutePoints();
 
-      createDiagramInterchangeInformation(handledArtifacts.get(associationId), optimizeEdgePoints(points));
-
+      createDiagramInterchangeInformation(handledArtifacts.get(associationId),
+        optimizeEdgePoints(points));
     }
   }
 
   protected double euclidianDistance(mxPoint point1, mxPoint point2) {
-    return Math.sqrt(((point2.getX() - point1.getX()) * (point2.getX() - point1.getX()) + (point2.getY() - point1.getY()) * (point2.getY() - point1.getY())));
+    return Math.sqrt(((point2.getX() - point1.getX()) * (point2.getX() - point1.getX())
+      + (point2.getY() - point1.getY()) * (point2.getY() - point1.getY())));
   }
 
   // JGraphX sometime generates points that visually are not really necessary.
   // This method will remove any such points.
   protected List<mxPoint> optimizeEdgePoints(List<mxPoint> unoptimizedPointsList) {
-    List<mxPoint> optimizedPointsList = new ArrayList<mxPoint>();
+    List<mxPoint> optimizedPointsList = new ArrayList<>();
     for (int i = 0; i < unoptimizedPointsList.size(); i++) {
 
       boolean keepPoint = true;
@@ -464,12 +476,15 @@ public class BpmnAutoLayout {
         mxPoint previousPoint = unoptimizedPointsList.get(i - 1);
         mxPoint nextPoint = unoptimizedPointsList.get(i + 1);
 
-        if (currentPoint.getX() >= previousPoint.getX() && currentPoint.getX() <= nextPoint.getX() && currentPoint.getY() == previousPoint.getY() && currentPoint.getY() == nextPoint.getY()) {
+        if (currentPoint.getX() >= previousPoint.getX() && currentPoint.getX() <= nextPoint.getX()
+          && currentPoint.getY() == previousPoint.getY()
+          && currentPoint.getY() == nextPoint.getY()) {
           keepPoint = false;
-        } else if (currentPoint.getY() >= previousPoint.getY() && currentPoint.getY() <= nextPoint.getY() && currentPoint.getX() == previousPoint.getX() && currentPoint.getX() == nextPoint.getX()) {
+        } else if (currentPoint.getY() >= previousPoint.getY()
+          && currentPoint.getY() <= nextPoint.getY() && currentPoint.getX() == previousPoint.getX()
+          && currentPoint.getX() == nextPoint.getX()) {
           keepPoint = false;
         }
-
       }
 
       if (keepPoint) {
@@ -481,7 +496,8 @@ public class BpmnAutoLayout {
     return optimizedPointsList;
   }
 
-  protected GraphicInfo createDiagramInterchangeInformation(FlowElement flowElement, int x, int y, int width, int height) {
+  protected GraphicInfo createDiagramInterchangeInformation(FlowElement flowElement, int x, int y,
+    int width, int height) {
     GraphicInfo graphicInfo = new GraphicInfo();
     graphicInfo.setX(x);
     graphicInfo.setY(y);
@@ -494,7 +510,7 @@ public class BpmnAutoLayout {
   }
 
   protected void createDiagramInterchangeInformation(BaseElement element, List<mxPoint> waypoints) {
-    List<GraphicInfo> graphicInfoForWaypoints = new ArrayList<GraphicInfo>();
+    List<GraphicInfo> graphicInfoForWaypoints = new ArrayList<>();
     for (mxPoint waypoint : waypoints) {
       GraphicInfo graphicInfo = new GraphicInfo();
       graphicInfo.setElement(element);
@@ -506,17 +522,20 @@ public class BpmnAutoLayout {
   }
 
   /**
-   * Since subprocesses are autolayouted independently (see {@link #handleSubProcess(FlowElement)}), the elements have x and y coordinates relative to the bounds of the subprocess (thinking the
-   * subprocess is on (0,0). This however, does not work for nested subprocesses, as they need to take in account the x and y coordinates for each of the parent subproceses.
-   *
-   * This method is to be called after fully layouting one process, since ALL elements need to have x and y.
+   * Since subprocesses are autolayouted independently (see {@link #handleSubProcess(FlowElement)}),
+   * the elements have x and y coordinates relative to the bounds of the subprocess (thinking the
+   * subprocess is on (0,0). This however, does not work for nested subprocesses, as they need to
+   * take in account the x and y coordinates for each of the parent subproceses.
+   * <p>
+   * This method is to be called after fully layouting one process, since ALL elements need to have
+   * x and y.
    */
   protected void translateNestedSubprocesses(Process process) {
-       for (FlowElement flowElement : process.getFlowElements()) {
-            if (flowElement instanceof SubProcess) {
-              translateNestedSubprocessElements((SubProcess) flowElement);
-            }
-       }
+    for (FlowElement flowElement : process.getFlowElements()) {
+      if (flowElement instanceof SubProcess) {
+        translateNestedSubprocessElements((SubProcess) flowElement);
+      }
+    }
   }
 
   protected void translateNestedSubprocessElements(SubProcess subProcess) {
@@ -525,7 +544,7 @@ public class BpmnAutoLayout {
     double subProcessX = subProcessGraphicInfo.getX();
     double subProcessY = subProcessGraphicInfo.getY();
 
-    List<SubProcess> nestedSubProcesses = new ArrayList<SubProcess>();
+    List<SubProcess> nestedSubProcesses = new ArrayList<>();
     for (FlowElement flowElement : subProcess.getFlowElements()) {
 
       if (flowElement instanceof SequenceFlow) {
@@ -534,7 +553,7 @@ public class BpmnAutoLayout {
           graphicInfo.setX(graphicInfo.getX() + subProcessX + subProcessMargin);
           graphicInfo.setY(graphicInfo.getY() + subProcessY + subProcessMargin);
         }
-      } else if (flowElement instanceof DataObject == false) {
+      } else if (!(flowElement instanceof DataObject)) {
 
         // Regular element
         GraphicInfo graphicInfo = bpmnModel.getLocationMap().get(flowElement.getId());
@@ -545,7 +564,6 @@ public class BpmnAutoLayout {
       if (flowElement instanceof SubProcess) {
         nestedSubProcesses.add((SubProcess) flowElement);
       }
-
     }
 
     // Continue for next level of nested subprocesses
@@ -558,50 +576,6 @@ public class BpmnAutoLayout {
 
   public mxGraph getGraph() {
     return graph;
-  }
-
-  public void setGraph(mxGraph graph) {
-    this.graph = graph;
-  }
-
-  public int getEventSize() {
-    return eventSize;
-  }
-
-  public void setEventSize(int eventSize) {
-    this.eventSize = eventSize;
-  }
-
-  public int getGatewaySize() {
-    return gatewaySize;
-  }
-
-  public void setGatewaySize(int gatewaySize) {
-    this.gatewaySize = gatewaySize;
-  }
-
-  public int getTaskWidth() {
-    return taskWidth;
-  }
-
-  public void setTaskWidth(int taskWidth) {
-    this.taskWidth = taskWidth;
-  }
-
-  public int getTaskHeight() {
-    return taskHeight;
-  }
-
-  public void setTaskHeight(int taskHeight) {
-    this.taskHeight = taskHeight;
-  }
-
-  public int getSubProcessMargin() {
-    return subProcessMargin;
-  }
-
-  public void setSubProcessMargin(int subProcessMargin) {
-    this.subProcessMargin = subProcessMargin;
   }
 
   // Due to a bug (see
